DataTransformation  pipeline created

--- a/research/02_datavalidation.ipynb
+++ b/research/02_datavalidation.ipynb
@@ -145,7 +145,7 @@
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "        self.schema = read_yaml(schema_filepath)\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "        create_directories(self.config.artifacts_root)\n",
     "    def get_dataValidation_config(self)->DataValidationConfig:\n",
     "        config = self.config.data_validation       \n",
     "        schema = self.schema.COLUMNS\n",
