--- a/research/01_dataIngestion.ipynb
+++ b/research/01_dataIngestion.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "        self.schema = read_yaml(schema_filepath)\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "        create_directories(self.config.artifacts_root)\n",
     "    def get_dataIngestion_config(self)->DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
     "        create_directories(config.root_dir)\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,25 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-28 13:46:27,364: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2023-09-28 13:46:27,380: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-09-28 13:46:27,391: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-09-28 13:46:27,400: INFO: common: created directory at: artifacts]\n",
-      "[2023-09-28 13:46:27,409: INFO: common: created directory at: artifacts/data_ingestion]\n"
+      "[2023-10-01 11:16:59,804: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-10-01 11:16:59,809: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-01 11:16:59,817: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-10-01 11:16:59,820: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-01 11:16:59,821: INFO: common: created directory at: artifacts/data_ingestion]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-28 13:46:28,823: INFO: 1347778323: artifacts/data_ingestion/data.zip downloading..! with following infof: \n",
+      "[2023-10-01 11:17:01,493: INFO: 1347778323: artifacts/data_ingestion/data.zip downloading..! with following infof: \n",
       "Connection: close\n",
       "Content-Length: 26176\n",
       "Cache-Control: max-age=300\n",
@@ -173,19 +173,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 25E2:250C0:12AC4D:159C8A:65153305\n",
+      "X-GitHub-Request-Id: 32DE:250C0:6C8281:7B95CA:65190795\n",
       "Accept-Ranges: bytes\n",
-      "Date: Thu, 28 Sep 2023 08:15:28 GMT\n",
+      "Date: Sun, 01 Oct 2023 05:45:58 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-bom4734-BOM\n",
-      "X-Cache: HIT\n",
-      "X-Cache-Hits: 1\n",
-      "X-Timer: S1695888928.125379,VS0,VE355\n",
+      "X-Served-By: cache-bom4720-BOM\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1696139158.276679,VS0,VE345\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 8b30d2ab32f2e5fb3e169ebbfd22d705cd3e9a4d\n",
-      "Expires: Thu, 28 Sep 2023 08:20:28 GMT\n",
+      "X-Fastly-Request-ID: e1bc616c7903f62498ba0555b8301420459c1de8\n",
+      "Expires: Sun, 01 Oct 2023 05:50:58 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
