Model Evaluation Pipeline set

--- a/research/04_modeltrainer.ipynb
+++ b/research/04_modeltrainer.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
     "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
-    "    test_data_path: Path\n",
     "    model_name: str\n",
+    "    scaler_name: str\n",
     "    target_column: str\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +110,13 @@
     "        config = self.config.model_trainer\n",
     "        schema = self.schema.TARGET_COLUMN\n",
     "        create_directories(config.root_dir)\n",
-    "        model_trainer_config  = ModelTrainerConfig(root_dir=config.root_dir,train_data_path=config.train_data_path, test_data_path=config.test_data_path,model_name=config.model_name, target_column=schema.name)\n",
+    "        model_trainer_config  = ModelTrainerConfig(root_dir=config.root_dir,train_data_path=config.train_data_path,model_name=config.model_name,scaler_name=config.scaler_name,target_column=schema.name)\n",
     "        return model_trainer_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,18 +138,16 @@
     "        self.config = config\n",
     "    def train(self):\n",
     "        train_data = pd.read_csv(self.config.train_data_path)\n",
-    "        test_data = pd.read_csv(self.config.test_data_path)\n",
     "        x_train = train_data.drop(self.config.target_column, axis=1)\n",
-    "        x_test = test_data.drop(self.config.target_column, axis=1)\n",
     "        y_train = train_data[self.config.target_column]\n",
-    "        y_test = test_data[self.config.target_column]\n",
-    "        std_scaler = StandardScaler()\n",
-    "        x_train = std_scaler.fit_transform(x_train)\n",
-    "        x_test = std_scaler.transform(x_test)\n",
+    "        std = StandardScaler()\n",
+    "        x_train = std.fit_transform(x_train)\n",
     "        rfr = RandomForestRegressor()\n",
     "        rfr.fit(x_train,y_train)\n",
     "        with open(os.path.join(self.config.root_dir[0], self.config.model_name), 'wb') as f:\n",
     "            pkl.dump(rfr, f)\n",
+    "        with open(os.path.join(self.config.root_dir[0], self.config.scaler_name), 'wb') as f:\n",
+    "            pkl.dump(std, f)\n",
     "        \n",
     "        \n",
     "        \n",
@@ -160,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-01 12:22:46,025: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2023-10-01 12:22:46,032: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-10-01 12:22:46,036: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-10-01 12:22:46,037: INFO: common: created directory at: artifacts]\n",
-      "[2023-10-01 12:22:46,038: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2023-10-01 15:03:50,101: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-10-01 15:03:50,143: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-10-01 15:03:50,183: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-10-01 15:03:50,195: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-01 15:03:50,205: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
